updated recipes